<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.warlockgaming.weatherassist.weatherassist.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_threshold"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_weight="0.5"
                android:text="@string/settings_threshold" />

            <EditText
                android:id="@+id/settings_edit_threshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/settings_threshold_default" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_hours"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:text="@string/settings_hours"
                android:layout_weight="0.5"/>

            <EditText
                android:id="@+id/settings_edit_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/settings_hours_default" />
        </LinearLayout>

        <Button
            android:id="@+id/settings_return"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_main_button" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
