<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.warlockgaming.weatherassist.weatherassist.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/action_settings"
            android:layout_weight="0.1"/>

        <ImageView
            android:id="@+id/weather_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/umbrella_small"
            android:adjustViewBounds="true"
            android:layout_weight="0.4"/>

        <TextView
            android:id="@+id/rain_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="serif"
            android:text="It Will Rain Today"
            android:textAlignment="center"
            android:layout_weight="0.05"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/location_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/location_title"
            android:textAlignment="center"
            android:layout_weight=".05"/>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/location_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:context="com.warlockgaming.weatherassist.weatherassist.MainActivity"
            android:layout_weight=".4"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/main_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_gravity="bottom"
            app:adSize="@string/adSize"
            app:adUnitId="@string/admob_key_main" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
